# 3b-harness

./: .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  PROGRESS.md  README.md  consolidated-plan.md  todos.md
.claude/: prompts  skills
.claude-plugin/: plugin.json
.github/workflows/: claude-code-review.yml  claude.yml
archive/: README.md
docs/interview-skill/: 01-overview.md  02-routing-decision-tree.md  03-dialectic-rhythm.md  04-ambiguity-scoring.md  05-state-and-persistence.md  06-agents-and-roles.md  07-pm-variant.md  08-customization-guide.md  09-plugin-build-decisions.ko.md  09-plugin-build-decisions.md  README.md
installer/: CUSTOMIZATIONS.md  README.ko.md  README.md  RTK.md  setup.sh  statusline-wrapper.sh
installer/claude-hud-patches/: README.md  UPGRADE-GUIDE.md  claude-hud-post-patches.sh
installer/commands/: clean-review.md  commit.md
installer/hooks/: aws-safety-hook.py  correction-detector-hook.py  formatter-hook.py  friction-context-hook.py  implementation-tracker-hook.py  knowledge-link-checker.py  knowledge-staleness-hook.py  me-md-protection-hook.py  post-impl-review-checklist.md  post-implementation-review-hook.py  profile-sync-hook.py  regenerate-usage-dashboard.py  scope-warning-hook.py  skill-routing-diff.py  stop-verification-hook.py  symlink-check-hook.py  symlink-daily-check.sh  terraform-safety-hook.py  track-mcp-usage.py  (+5 more)
plugins/3b/engine/: README.md  pyproject.toml
plugins/3b/engine/src/interview_plugin_core/: __init__.py  brownfield.py  interview.py  prompt_loader.py
scripts/: check-3b-drift.sh  flip-to-forge.sh
(+98 files in other folders)
