[project]
name = "interview-codex-core"
version = "0.1.0"
description = "Portable Socratic interview core extracted from Ouroboros."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.0.0,<3.0.0",
    "structlog>=24.0.0,<26.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.0",
    "pytest-asyncio>=1.3.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/interview_plugin_core"]

[tool.pytest.ini_options]
pythonpath = ["src"]
asyncio_mode = "auto"
